final final touch

--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,14 @@ body {
 header {
  	min-height: 300px;
  	background-image: url("http://www.biocenit.cat/mypics/89/895990/magical-forest-wallpaper.jpg");
- 	background-position: center;
+ 	background-position: bottom;
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 
 h1 {
 	color: #fff;
-    font-family: "Arial";
+    font-family: "Palatino Linotype";
     text-transform: uppercase;
 	text-align: left;
     padding-top: 220px;
@@ -49,7 +49,7 @@ main aside nav ul li a {
     font-size: 13px;
 	text-transform: uppercase;
 	transition: 0.5s;
-	font-family: "Arial";
+	font-family: "Palatino Linotype";
 }      
 
 article {
@@ -65,7 +65,7 @@ h2 {
 }
 
 p {
-	font-family: "Arial";
+	font-family: "Palatino Linotype";
 }
 
 footer {
@@ -79,5 +79,4 @@ footer {
 footer span:after {
 	content: " 2005 | All Rights Reserved";
 }
-
 
